--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,11 +3,11 @@ message("AlmagRetDriver ReleaseCMakeLists")
 add_executable(${PROJECT_NAME}
     ${PROJECT_SOURCE_DIR}/src/main.cpp
     ${UTILS}
-    ${HDLC}
     ${PLUGIN_SPECIFICS}
 
-    ${EXTERNAL_LIBRARIES_DATABASE}
     ${EXTERNAL_LIBRARIES_COMMAND_PATTERN}
+    ${EXTERNAL_LIBRARIES_DATABASE}
+    ${EXTERNAL_LIBRARIES_HDLC}
     ${EXTERNAL_LIBRARIES_USER_INTERFACE}
     ${EXTERNAL_LIBRARIES_UTILS}
 )
