--- a/test/MT/CMakeLists.txt
+++ b/test/MT/CMakeLists.txt
@@ -23,7 +23,6 @@ set(MT
 
 add_executable(${PROJECT_TESTS_NAME}
     ${PROJECT_SOURCE_DIR}/test/main.cpp
-    ${HDLC}
     ${PLUGIN_SPECIFICS}
 
     ${MT}
@@ -32,8 +31,9 @@ add_executable(${PROJECT_TESTS_NAME}
     ${TESTUTILS_COMMUNICATORS}
     ${TESTUTILS_HDLC_FRAMESFACTORIES}
 
-    ${EXTERNAL_LIBRARIES_DATABASE}
     ${EXTERNAL_LIBRARIES_COMMAND_PATTERN}
+    ${EXTERNAL_LIBRARIES_DATABASE}
+    ${EXTERNAL_LIBRARIES_HDLC}
     ${EXTERNAL_LIBRARIES_USER_INTERFACE}
     ${EXTERNAL_LIBRARIES_UTILS}
 )
