--- a/test/UT/CMakeLists.txt
+++ b/test/UT/CMakeLists.txt
@@ -12,13 +12,13 @@ set(UT
 
 add_executable(${PROJECT_TESTS_NAME}
     ${PROJECT_SOURCE_DIR}/test/main.cpp
-    ${HDLC}
     ${PLUGIN_SPECIFICS}
 
     ${UT}
     ${FIXTURES}
     ${TESTUTILS_HDLC_FRAMESFACTORIES}
     ${EXTERNAL_LIBRARIES_DATABASE}
+    ${EXTERNAL_LIBRARIES_HDLC}
     ${EXTERNAL_LIBRARIES_UTILS}
     )
 
