--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(${PROJECT_NAME}
     ${UTILS}
     ${PLUGIN_SPECIFICS}
 
+    ${EXTERNAL_LIBRARIES_MESSAGING_PATTERN}
     ${EXTERNAL_LIBRARIES_COMMAND_PATTERN}
     ${EXTERNAL_LIBRARIES_DATABASE}
     ${EXTERNAL_LIBRARIES_HDLC}
