--- a/test/MT/CMakeLists.txt
+++ b/test/MT/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(${PROJECT_TESTS_NAME}
     ${EXTERNAL_LIBRARIES_COMMAND_PATTERN}
     ${EXTERNAL_LIBRARIES_DATABASE}
     ${EXTERNAL_LIBRARIES_HDLC}
+    ${EXTERNAL_LIBRARIES_MESSAGING_PATTERN}
     ${EXTERNAL_LIBRARIES_USER_INTERFACE}
     ${EXTERNAL_LIBRARIES_UTILS}
 )
