--- a/test/UT/CMakeLists.txt
+++ b/test/UT/CMakeLists.txt
@@ -2,7 +2,7 @@ set(PROJECT_TESTS_NAME Almag_RetDriver_UT)
 message(${CMAKE_CURRENT_SOURCE_DIR})
 
 set(UT
-    ${PROJECT_SOURCE_DIR}/test/UT/Communication/ZMqReqRespCommunicatorTests.cpp
+    ${PROJECT_SOURCE_DIR}/test/UT/Communication/ZmqReqRespCommunicatorTests.cpp
     ${PROJECT_SOURCE_DIR}/test/UT/DB/DBTests.cpp
     ${PROJECT_SOURCE_DIR}/test/UT/HDLC/HDLCReqFrameBodyTests.cpp
     ${PROJECT_SOURCE_DIR}/test/UT/HDLC/HDLCFrameTests.cpp
@@ -14,14 +14,15 @@ add_executable(${PROJECT_TESTS_NAME}
     ${PROJECT_SOURCE_DIR}/test/main.cpp
     ${UT}
     ${EXTERNAL_LIBRARIES_TESTUTILS}
+    ${EXTERNAL_LIBRARIES_TESTUTILS_COMMUNICATORS}
     ${EXTERNAL_LIBRARIES_TESTUTILS_FIXTURES}
     ${EXTERNAL_LIBRARIES_TESTUTILS_HDLC_FRAMESFACTORIES}
 
     ${PLUGIN_SPECIFICS}
     ${EXTERNAL_LIBRARIES_DATABASE}
     ${EXTERNAL_LIBRARIES_HDLC}
+    ${EXTERNAL_LIBRARIES_MESSAGING_PATTERN}
     ${EXTERNAL_LIBRARIES_UTILS}
-
 )
 
 add_dependencies(${PROJECT_TESTS_NAME} gmock_main)
