Rename the Almag on KorytkoMag

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ tags
 .idea
 
 # Binaries
-Almag_RetDriver
-Almag_RetDriver_UT
-Almag_RetDriver_MT
+KorytkoMag_RetDriver
+KorytkoMag_RetDriver_UT
+KorytkoMag_RetDriver_MT
 
