--- a/.gitmodules
+++ b/.gitmodules
@@ -12,10 +12,10 @@
 	url = https://github.com/trunksBT/KorytkoMag_UserInterface.git
 [submodule "externalLibraries/Utils"]
 	path = externalLibraries/Utils
-	url = git@github.com:trunksBT/KorytkoMag_Utils.git
+	url = https://github.com/trunksBT/KorytkoMag_Utils.git
 [submodule "docs/UML_SequenceDiagrams"]
 	path = docs/UML_SequenceDiagrams
-	url = git@github.com:trunksBT/KorytkoMag_RetDriver_Device_Simulator_Docs.git
+	url = https://github.com/trunksBT/KorytkoMag_RetDriver_Device_Simulator_Docs.git
 [submodule "externalLibraries/Controller"]
 	path = externalLibraries/Controller
 	url = https://github.com/trunksBT/KorytkoMag_Controller.git
